Embed child in parent component

--- a/force-app/main/default/lwc/helloChildComponent/helloChildComponent.html
+++ b/force-app/main/default/lwc/helloChildComponent/helloChildComponent.html
@@ -1,1 +1,7 @@
-<template> </template>
+<template>
+    <lightning-card title="Child Component">
+        <div class="">
+            <h1>Hello from <strong>CHILD</strong></h1>
+            <c-hello-child-component></c-hello-child-component>
+        </div> </lightning-card
+></template>
