--- a/force-app/main/default/lwc/helloParentComponent/helloParentComponent.html
+++ b/force-app/main/default/lwc/helloParentComponent/helloParentComponent.html
@@ -1,1 +1,8 @@
-<template> </template>
+<template>
+    <lightning-card title="Parent Component">
+        <div class="">
+            <h1>Hello from <strong>PARENT</strong></h1>
+            <c-hello-child-component></c-hello-child-component>
+        </div>
+    </lightning-card>
+</template>
