Bugfix: removed component loop

--- a/force-app/main/default/lwc/helloChildComponent/helloChildComponent.html
+++ b/force-app/main/default/lwc/helloChildComponent/helloChildComponent.html
@@ -1,7 +1,7 @@
 <template>
     <lightning-card title="Child Component">
-        <div class="">
+        <div class="slds-var-m-around_small">
             <h1>Hello from <strong>CHILD</strong></h1>
-            <c-hello-child-component></c-hello-child-component>
-        </div> </lightning-card
-></template>
+        </div>
+    </lightning-card></template
+>
