--- a/force-app/main/default/lwc/helloParentComponent/helloParentComponent.html
+++ b/force-app/main/default/lwc/helloParentComponent/helloParentComponent.html
@@ -1,8 +1,8 @@
 <template>
     <lightning-card title="Parent Component">
-        <div class="">
+        <div class="slds-var-m-around_small">
             <h1>Hello from <strong>PARENT</strong></h1>
-            <c-hello-child-component></c-hello-child-component>
         </div>
+        <c-hello-child-component></c-hello-child-component>
     </lightning-card>
 </template>
