Added internal & internal styling components

--- a/force-app/main/default/lwc/cssLWC/cssLWC.html
+++ b/force-app/main/default/lwc/cssLWC/cssLWC.html
@@ -1,1 +1,13 @@
-<template> </template>
+<template>
+    <lightning-card title="Inline styling">
+        <div class="slds-var-m-around_medium">
+            <div style="color: aquamarine; font-size: 20px">Hello</div>
+        </div>
+    </lightning-card>
+    <lightning-card title="External styling">
+        <div class="slds-var-m-around_medium">
+            <p>P jak placek</p>
+            <div class="placek">Lubię placki</div>
+        </div>
+    </lightning-card>
+</template>
