Added render method LWC

--- a/force-app/main/default/lwc/lifecycleParent/lifecycleParent.html
+++ b/force-app/main/default/lwc/lifecycleParent/lifecycleParent.html
@@ -21,4 +21,26 @@
             ></lightning-button>
         </template>
     </lightning-card>
+
+    <lightning-card title="Render method">
+        <div class="slds-var-m-around_medium">
+            <h2>Choose sth</h2>
+            <div class="slds-var-m-around_medium">
+                <lightning-button
+                    variant="brand"
+                    label="Sign in"
+                    title="Sign in"
+                    onclick={handleClick}
+                    class="slds-var-m-left_x-small"
+                ></lightning-button>
+                <lightning-button
+                    variant="brand"
+                    label="Sign up"
+                    title="Sign up"
+                    onclick={handleClick}
+                    class="slds-var-m-left_x-small"
+                ></lightning-button>
+            </div>
+        </div>
+    </lightning-card>
 </template>
